--- a/index.html
+++ b/index.html
@@ -5,11 +5,37 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lesson</title>
-  <link rel="stylesheet" href="css/flexboxgrid.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
-
+  <div class="box">
+    <form class="box__form d-flex flex-column">
+      <label for="fnmae">
+        <input class="box__inp box__inp-fname" type="text" name="fnmae" id="fnmae" autocomplete="off" placeholder="First Name">
+        <span class="box__valid box__valid-fnmae">Please enter first name</span>
+      </label>
+      <label for="lnmae">
+        <input class="box__inp box__inp-lname" type="text" name="lnmae" id="lnmae" autocomplete="off" placeholder="Last Name">
+        <span class="box__valid box__valid-lname">Please enter last name</span>
+      </label>
+      <label for="age">
+        <input class="box__inp box__inp-age" type="number" name="age" id="age" autocomplete="off" placeholder="Age">
+        <span class="box__valid box__valid--age">Please enter age</span>
+      </label>
+      <label for="pasw">
+        <input class="box__inp box__inp-pasw" type="text" name="pasw" id="pasw" autocomplete="off" placeholder="Password">
+        <span class="box__valid box__valid--pasw">Please enter password</span>
+      </label>
+      <label for="confirm-pasw">
+        <input class="box__inp box__inp-pasw-confirm" type="text" name="confirm-pasw" id="confirm-pasw" autocomplete="off" placeholder="Confirm Password">
+        <span class="box__valid box__valid--con-pasw">Please confirm password</span>
+        <span class="box__valid check-confirm">Check your confirm password</span>
+      </label>
+      <button class="box__btn" type="submit">Send</button>
+    </form>
+  </div>
   <script src="js/main.js"></script>
 </body>
 </html>
