--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
         <span class="box__valid box__valid--age">Please enter age</span>
       </label>
       <label for="pasw">
-        <input class="box__inp box__inp-pasw" type="text" name="pasw" id="pasw" autocomplete="off" placeholder="Password">
+        <input class="box__inp box__inp-pasw" type="password" name="pasw" id="pasw" autocomplete="off" placeholder="Password">
         <span class="box__valid box__valid--pasw">Please enter password</span>
       </label>
       <label for="confirm-pasw">
-        <input class="box__inp box__inp-pasw-confirm" type="text" name="confirm-pasw" id="confirm-pasw" autocomplete="off" placeholder="Confirm Password">
+        <input class="box__inp box__inp-pasw-confirm" type="password" name="confirm-pasw" id="confirm-pasw" autocomplete="off" placeholder="Confirm Password">
         <span class="box__valid box__valid--con-pasw">Please confirm password</span>
         <span class="box__valid check-confirm">Check your confirm password</span>
       </label>
